skosmos_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
     nginx.ingress.kubernetes.io/proxy-body-size: "0"
     # type of authentication
     nginx.ingress.kubernetes.io/auth-type: basic
     # name of the secret that contains the user/password definitions
     nginx.ingress.kubernetes.io/auth-secret: basic-auth
     # message to display with an appropriate context why the authentication is required
     nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
  name: skosmos-ingress
spec:
   tls:
   - hosts:
     - skosmos.v7f.eu
     secretName: testsecret-tls
   rules:
   - host: skosmos.v7f.eu
     http:
       paths:
       - pathType: Prefix
         path: /
         backend:
           service:
             name: 10.0.1.5
             port:
               number: 9090
