test_ingress.yaml
#apiVersion: extensions/v1beta1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
     nginx.ingress.kubernetes.io/proxy-body-size: "0"
  name: test-ingress
spec:
   tls:
   - hosts:
     - tom-kad-k8s.westeurope.cloudapp.azure.com
     - k8s.v7f.eu
     - pgadmin.v7f.eu
     - geoserver.v7f.eu
     secretName: testsecret-tls
   rules:
   - host: k8s.v7f.eu
     http:
       paths:
       - pathType: Prefix
         path: /
         backend:
           service:
             name: pythonapp
             port:
               number: 80
   - host: pgadmin.v7f.eu
     http:
       paths:
       - pathType: Prefix
         path: /
         backend:
           service:
             name: pgadmin4
             port:
               number: 80
   - host: geoserver.v7f.eu
     http:
       paths:
       - pathType: Prefix
         path: /
         backend:
           service:
             name: geoserver
             port:
               number: 8080
